# djano_authorisation

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  manage.py  pyproject.toml  setup.py
authApp/: apps.py  forms.py  models.py  urls.py  views.py
authApp/migrations/: 0001_initial.py  0002_create_admin.py
authApp/templates/auth/: base.html  create.html  profile.html  users.html
authApp/templates/auth/registration/: login.html
authApp/templates/authApp/: base.html  base_with_header.html  create.html  profile.html  users.html
authApp/templates/authApp/registration/: login.html  logout.html
authApp/views/: __init__.py  detail.py  index.py  users.py
base_app/: settings.py  urls.py  wsgi.py
base_app/templates/base_app/: base_with_header.html
base_app_settings/: settings.py  urls.py  wsgi.py
django_authorisation/: settings.py  urls.py  wsgi.py
templates/default/: base.html  base_with_header.html
