[tool.poetry]
name = "base_app"
version = "0.0.5"
description = ""
authors = ["Parametricall <22248105+Parametricall@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
